Version 1.0.4-CVS (?? ??? 2006)
 - Fixed bug 1502099: Fix for user-app-postnuke.php
 - Updated Portugues translation
Version 1.0.3 (11 Apr 2006)
 - Patch 1456375: Day view - "Description" not translated, improper
   handling of HTML in description
 - Patch 1458663: updated Hungarian translation
 - Fixed bug 1444923: system settings error on save when ovrd=1 is used
 - Fixed bug 1420859: Problems with overriding conflict
 - Fixed bug 1445535: tables-db2.sql NULL usage was incorrect
 - Patch 1279537: Don't display confidential events in upcoming.php
 - Patch 1445335: Added Greek translations
 - Fixed bug 1406428: Bug in endhour
 - Fixed bug 1438181: DBI Interbase-Firebird connection call has wrong
   parameters
 - Fixed bug 1279804: send_reminders.php fails in v1.0.1
 - Fixed bug 1417585: vCal export of forever repeating events fails for Palm
 - Fixed bug 1417529: Can't change public access layers
 - Fixed bug 1397766: Tomorrow Report fails to This Week
 - Fixed bug 1374014 Prefs page displays option to modify Public Acces calendar..
 - Fixed bug 1382217 Glitch in handling of public access prefs
 - Added support for DB2
Version 1.0.2 (06 Dec 2005)
 - Fixed vuln in layers: published vulnerability in layers_toggle.php
   was fixed
 - Security fixes: fixes for activity_log.php, export_handler.php,
   edit_template.php, pref_handler.php and admin_handlder.php
   that deal with SQL Injection
 - Fixed bug 1349621: Information disclosure vulnerabililty on failed login
 - Fixed bug 1353363: publish.php logic error for public user?
 - Fixed bug 1328589: typo in del_entry for read-only calendars.
 - Added new time range options for reports: next 14/30/60/90/180/365 days
   This allows reports to show events starting with current date
 - Patch 1288923: Fix for bar width in print_entry_timebar
 - Added Romanian, Turkish, Welsh to config.php in places where they were
   missing.
 - Fixed bug 1296294: Javascript error when saving with empty description on IE