@@ -1,4 +1,6 @@
 Version 1.0.4-CVS (?? ??? 2006)
+ - Security fix: do not allow setting of "includedir" via URL when
+   register_globals is enabled in php.ini
  - Fixed bug 1502099: Fix for user-app-postnuke.php
  - Updated Portugues translation
 Version 1.0.3 (11 Apr 2006)
